testsuite/tests/grammar/invalid_error_node/test_synthetic/test.lkt
from common import FooNode, Example

@synthetic class ErrorDecl : FooNode implements ErrorNode {
}
